--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,6 @@ html {
 body {
   width: 100vw;
   font-weight: 400;
-  margin-bottom: 500px;
 }
 a {
   text-decoration: none;
@@ -148,7 +147,7 @@ header a:hover {
 }
 .arrow {
   rotate: 315deg;
-  font-size: 15px;
+  font-size: 25px;
 }
 .numbers {
   display: flex;
@@ -222,6 +221,7 @@ header a:hover {
   margin-top: 70px;
   align-items: center;
   column-gap: 40px;
+  padding: 0 40px;
 }
 .writeUp p {
   font-family: roboto;
@@ -237,14 +237,20 @@ header a:hover {
   height: auto;
   row-gap: 20px;
 }
+
 .texter button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  column-gap: 6px;
+  height: 100%;
+  width: 100%;
   border: none;
   padding: 15px 20px;
   text-transform: uppercase;
   background-color: rgb(107, 12, 12);
   color: #fff;
   letter-spacing: 2.5px;
-  margin: auto;
   border-radius: 0 20px;
   transition: 0.3s;
 }
@@ -350,10 +356,212 @@ header a:hover {
   color: #fff;
   transition: 0.5s;
 }
-.firstCard:hover,
-.secondCard:hover,
-.thirdCard:hover {
-}
+
 .blog {
-  margin-top: 300px;
+  margin-top: 200px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.blogCards {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  column-gap: 50px;
+  padding: 0 50px;
+  flex-wrap: wrap;
+}
+.card {
+  margin-top: 60px;
+  padding: 15px;
+  width: 300px;
+  display: flex;
+  flex-direction: column;
+  border-radius: 0 90px 0 10%;
+  box-shadow: 0 0 3px gray;
+  font-family: roboto;
+}
+.card img {
+  object-fit: cover;
+  border-radius: 0 30%;
+  width: 265px;
+  height: 265px;
+  align-self: center;
+}
+.calender {
+  display: flex;
+  justify-content: space-between;
+  font-size: 12px;
+  margin-top: 10px;
+}
+.nameIcon,
+.date {
+  display: flex;
+  column-gap: 5px;
+}
+.lorem {
+  margin-top: 10px;
+}
+.card a {
+  align-self: flex-end;
+  margin-top: 19px;
+  color: #000;
+  display: flex;
+  column-gap: 4px;
+  align-items: center;
+  transition: 0.3s;
+  font-weight: 100;
+  padding: 10px 15px;
+  border-radius: 5px;
+}
+.card a:hover {
+  background-color: rgb(140, 19, 19);
+  color: #fff;
+}
+.blog a button {
+  padding: 15px 25px;
+  font-size: 20px;
+  text-transform: capitalize;
+  font-family: roboto;
+  margin-top: 60px;
+  border: none;
+  border-radius: 0 20px;
+  background-color: rgb(107, 12, 12);
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  column-gap: 9px;
+  transition: 0.3s;
+}
+.blog a button:hover {
+  background-color: rgb(140, 19, 19);
+  transform: scale(1.02);
+}
+.footerContainer {
+  font-family: roboto;
+  display: flex;
+  justify-content: space-around;
+  margin-top: 120px;
+  background-color: #252525;
+  color: #fff;
+  padding: 60px 0;
+  text-transform: capitalize;
+  font-weight: 100;
+  letter-spacing: 1px;
+}
+.footerContainer a {
+  color: #fff;
+}
+.footer1 {
+  display: flex;
+  flex-direction: column;
+  row-gap: 30px;
+  width: 400px;
+}
+.footer1 span {
+  display: flex;
+  align-items: center;
+  column-gap: 10px;
+}
+.footer1 img {
+  width: 50px;
+  height: 50px;
+  object-fit: cover;
+}
+.footer2Div {
+  display: flex;
+  justify-content: center;
+  column-gap: 40px;
+}
+.quickLinks,
+.resources,
+.socialMedia {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  row-gap: 10px;
+}
+.mediaFlex {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  column-gap: 20px;
+}
+.brands {
+  font-size: 30px;
+  width: 100%;
+  transition: 0.3s;
+  padding: 4px;
+}
+.mediaFlex a:first-child {
+  color: orangered;
+}
+.brands:hover {
+  color: orangered;
+}
+.footerContainer form {
+  display: flex;
+  flex-direction: column;
+  margin-top: 45px;
+}
+.footerContainer label {
+  font-size: 25px;
+  font-weight: 200;
+  margin-bottom: 10px;
+}
+
+.footerContainer .icon {
+  position: relative;
+}
+.footerContainer input {
+  background-color: #484c53;
+  width: 100%;
+  border: none;
+  padding: 15px;
+  font-size: 20px;
+  color: #fff;
+  border-radius: 5px;
+  outline: none;
+  transition: 0.3s;
+}
+.footerContainer input:focus {
+  box-shadow: 0 0 4px white;
+}
+.i {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 10px;
+  position: absolute;
+  left: 0;
+  top: 0;
+  font-size: 25px;
+  height: 100%;
+}
+.icon input[placeholder] {
+  padding-left: 45px;
+}
+.sendBtn {
+  position: absolute;
+  right: 0;
+  top: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  margin-right: 6px;
+}
+.sendBtn button {
+  padding: 10px 40px;
+  font-size: 20px;
+  background-color: rgb(107, 12, 12);
+  border: none;
+  color: #fff;
+  border-radius: 5px;
+  transition: 0.3s;
+}
+.sendBtn button:hover {
+  background-color: rgb(140, 19, 19);
 }
