--- a/src/index.css
+++ b/src/index.css
@@ -53,6 +53,18 @@ header a:hover {
   color: #fff;
   padding: 15px 20px;
 }
+nav {
+  display: none;
+}
+
+span.ham {
+  width: 28px;
+  background-color: #000;
+  height: 6px;
+  display: block;
+  margin: 3px 0;
+  border-radius: 40px;
+}
 .firstPageContent {
   display: flex;
   justify-content: center;
@@ -215,12 +227,14 @@ header a:hover {
   left: 50%;
   transform: translateX(-50%);
 }
+/* About us */
 .writeUp {
   display: flex;
   justify-content: center;
+  flex-wrap: wrap;
   margin-top: 70px;
   align-items: center;
-  column-gap: 40px;
+  column-gap: 20px;
   padding: 0 40px;
 }
 .writeUp p {
@@ -290,6 +304,7 @@ header a:hover {
   align-self: flex-start;
 }
 
+/* Testimonial */
 .aboutImg {
   width: 90px;
   height: 90px;
@@ -299,8 +314,7 @@ header a:hover {
 
 .testimonialCards {
   display: flex;
-  justify-content: center;
-  column-gap: 50px;
+  justify-content: space-around;
   margin-top: 70px;
   flex-wrap: wrap;
   padding: 0 50px;
@@ -354,7 +368,6 @@ header a:hover {
   margin-top: 50px;
   background-color: rgb(140, 19, 19);
   color: #fff;
-  transition: 0.5s;
 }
 
 .blog {
@@ -366,10 +379,10 @@ header a:hover {
 }
 .blogCards {
   display: flex;
-  justify-content: center;
-  align-items: center;
-  column-gap: 50px;
+  width: 100%;
   padding: 0 50px;
+  justify-content: space-around;
+  align-items: center;
   flex-wrap: wrap;
 }
 .card {
@@ -439,6 +452,8 @@ header a:hover {
   background-color: rgb(140, 19, 19);
   transform: scale(1.02);
 }
+
+/* Footer */
 .footerContainer {
   font-family: roboto;
   display: flex;
@@ -564,4 +579,129 @@ header a:hover {
 }
 .sendBtn button:hover {
   background-color: rgb(140, 19, 19);
+}
+
+@media screen and (max-width: 1250px) {
+  header {
+    padding: 30px;
+  }
+  header a {
+    padding: 15px;
+  }
+  header a:hover {
+    padding: 15px;
+  }
+  .firstPageContent .ngopi {
+    font-size: 50px;
+    width: 500px;
+  }
+  .firstPageContent .ngopi::after {
+    width: 150px;
+    bottom: -25px;
+  }
+  .firstPageContent .wish {
+    font-size: 40px;
+    margin: 60px 0 20px 0;
+  }
+  .para {
+    font-size: 20px;
+    padding: 0 30px;
+  }
+  .firstPageContent button {
+    padding: 20px;
+    font-size: 18px;
+  }
+  .coffeeImages .zoomImage {
+    width: 200px;
+    height: 250px;
+  }
+  .arrow {
+    font-size: 18px;
+  }
+  .numbers {
+    padding: 20px 0;
+  }
+  .numbers span p:first-child {
+    font-size: 50px;
+  }
+  /* Second Page Starts */
+
+  .secondPageContent h3 {
+    font-size: 30px;
+  }
+  /* About us */
+  .writeUp {
+    justify-content: space-around;
+    column-gap: 0;
+  }
+  .writeUp p {
+    font-size: 19px;
+  }
+  .images2 img {
+    width: 200px;
+    height: 250px;
+  }
+  /* Testimonial */
+  .aboutImg {
+    width: 60px;
+    height: 60px;
+  }
+  .testimonialCards {
+    margin-top: 0;
+  }
+  .avatar p {
+    font-size: 19px;
+  }
+  .firstCard,
+  .secondCard,
+  .thirdCard {
+    border-radius: 20px;
+    box-shadow: 0 0 20px gray;
+  }
+
+  /* Footer */
+  .footer1 {
+    width: 250px;
+  }
+  .quickLinks,
+  .resources,
+  .socialMedia {
+    row-gap: 5px;
+  }
+  .mediaFlex {
+    column-gap: 9px;
+  }
+  .brands {
+    font-size: 25px;
+  }
+  .footerContainer input {
+    padding: 10px;
+  }
+  .sendBtn button {
+    padding: 6px 15px;
+  }
+}
+
+@media screen and (max-width: 1093px) {
+  .writeUp {
+    justify-content: center;
+  }
+  .texter {
+    margin-bottom: 40px;
+  }
+  .texter,
+  .writeUp p {
+    width: 100%;
+    padding: 0 30px;
+    align-items: center;
+  }
+  .images2 {
+    column-gap: 20px;
+    width: 100%;
+    height: 400px;
+  }
+  .images2 img {
+    width: 250px;
+    height: 300px;
+  }
 }
