--- a/src/index.css
+++ b/src/index.css
@@ -60,9 +60,9 @@ nav {
 span.ham {
   width: 28px;
   background-color: #000;
-  height: 6px;
+  height: 4px;
   display: block;
-  margin: 3px 0;
+  margin: 5px 0;
   border-radius: 40px;
 }
 .firstPageContent {
@@ -314,11 +314,12 @@ span.ham {
 
 .testimonialCards {
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   margin-top: 70px;
   flex-wrap: wrap;
   padding: 0 50px;
   position: relative;
+  column-gap: 30px;
 }
 .testimonialCards::after {
   content: "";
@@ -370,6 +371,7 @@ span.ham {
   color: #fff;
 }
 
+/* Blog */
 .blog {
   margin-top: 200px;
   display: flex;
@@ -381,8 +383,9 @@ span.ham {
   display: flex;
   width: 100%;
   padding: 0 50px;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
+  column-gap: 40px;
   flex-wrap: wrap;
 }
 .card {
@@ -683,6 +686,27 @@ span.ham {
 }
 
 @media screen and (max-width: 1093px) {
+  nav {
+    display: block;
+    cursor: pointer;
+  }
+
+  nav.active span.ham:nth-child(2) {
+    opacity: 0;
+  }
+  nav.active span.ham:nth-child(1) {
+    transform: translateY(12px) rotate(45deg);
+    transition: 0.3s;
+  }
+  nav.active span.ham:nth-child(3) {
+    transform: translateY(-6px) rotate(-45deg);
+    transition: 0.3s;
+  }
+
+  header a {
+    display: none;
+  }
+
   .writeUp {
     justify-content: center;
   }
@@ -704,4 +728,36 @@ span.ham {
     width: 250px;
     height: 300px;
   }
+  /* Testimonial */
+  .aboutImg {
+    width: 110px;
+    height: 110px;
+  }
+  .testimonialCards {
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+  }
+  .cardText {
+    width: auto;
+  }
+  .avatar {
+    text-align: left;
+  }
+  .avatar p {
+    font-size: 25px;
+  }
+  .cardText {
+    margin-top: 10px;
+  }
+  .firstCard,
+  .secondCard,
+  .thirdCard {
+    width: 450px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 30px 40px;
+  }
+  /* Blog */
 }
