--- a/src/index.css
+++ b/src/index.css
@@ -59,7 +59,7 @@ nav {
 
 span.ham {
   width: 28px;
-  background-color: #000;
+  background-color: rgb(107, 12, 12);
   height: 4px;
   display: block;
   margin: 5px 0;
@@ -590,9 +590,59 @@ span.ham {
   }
   header a {
     padding: 15px;
+    margin-left: 20px;
+    margin-bottom: 20px;
   }
   header a:hover {
     padding: 15px;
+  }
+  nav {
+    display: block;
+    cursor: pointer;
+  }
+
+  .navLinks-False {
+    position: absolute;
+    right: -100%;
+    background-color: #fff;
+    height: 100vh;
+    display: flex;
+    justify-content: flex-start;
+    top: 0px;
+    width: 40vw;
+    flex-direction: column;
+    position: absolute;
+    transition: 0.9s;
+    margin-top: 110px;
+    z-index: -1;
+  }
+  .navLinks-False :first-child {
+  }
+  .navLinks-True {
+    background-color: #fff;
+    height: 100vh;
+    display: flex;
+    justify-content: flex-start;
+    top: 0px;
+    width: 40vw;
+    flex-direction: column;
+    right: 0;
+    margin-top: 100px;
+    position: absolute;
+    transition: 0.5s;
+    z-index: -1;
+  }
+
+  .barTranslate :nth-child(1) {
+    transform: translateY(12px) rotate(45deg);
+    transition: 0.3s;
+  }
+  .barTranslate :nth-child(2) {
+    opacity: 0;
+  }
+  .barTranslate :nth-child(3) {
+    transform: translateY(-6px) rotate(-45deg);
+    transition: 0.3s;
   }
   .firstPageContent .ngopi {
     font-size: 50px;
@@ -686,27 +736,6 @@ span.ham {
 }
 
 @media screen and (max-width: 1093px) {
-  nav {
-    display: block;
-    cursor: pointer;
-  }
-
-  nav.active span.ham:nth-child(2) {
-    opacity: 0;
-  }
-  nav.active span.ham:nth-child(1) {
-    transform: translateY(12px) rotate(45deg);
-    transition: 0.3s;
-  }
-  nav.active span.ham:nth-child(3) {
-    transform: translateY(-6px) rotate(-45deg);
-    transition: 0.3s;
-  }
-
-  header a {
-    display: none;
-  }
-
   .writeUp {
     justify-content: center;
   }
@@ -759,5 +788,4 @@ span.ham {
     justify-content: center;
     padding: 30px 40px;
   }
-  /* Blog */
 }
