--- a/src/index.css
+++ b/src/index.css
@@ -241,10 +241,10 @@ span.ham {
   column-gap: 20px;
 }
 .writeUp p {
-  font-family: roboto;
-  font-size: 20px;
-  font-weight: 200;
-  width: 600px;
+  font-size: 16px;
+  font-family: "Roboto", sans-serif;
+  letter-spacing: 0.5px;
+  font-weight: 300;
 }
 .texter {
   display: flex;
@@ -334,13 +334,11 @@ span.ham {
 .avatar {
   display: flex;
   align-items: center;
-  text-align: center;
   column-gap: 15px;
 }
 .avatar p {
-  font-weight: 500;
-  letter-spacing: 0.5px;
-  font-size: 20px;
+  font-weight: normal;
+  font-size: 18px;
 }
 .nameAndStar {
   row-gap: 15px;
@@ -651,8 +649,8 @@ span.ham {
     width: 100%;
   }
   .writeUp p {
-    font-family: roboto;
-    font-size: 18px;
+    font-family: "Roboto", sans-serif;
+    font-size: 16px;
     width: 100%;
   }
   .texter {
@@ -663,6 +661,7 @@ span.ham {
   .texter button {
     font-size: 15px;
     border-radius: 5px;
+    margin-bottom: 20px;
   }
   .images2 {
     column-gap: 10px;
@@ -696,7 +695,7 @@ span.ham {
     font-family: roboto;
     font-weight: 300;
     margin-top: 20px;
-    font-size: 16px;
+    font-size: 13px;
     letter-spacing: 0.5px;
     line-height: 20px;
   }
@@ -866,16 +865,15 @@ span.ham {
     bottom: -25px;
   }
   .firstPageContent .wish {
-    font-size: 22px;
     text-align: center;
     margin: 60px 0 10px 0;
   }
   .para {
-    font-size: 15px;
+    font-size: normal;
     padding: 0 30px;
   }
   .firstPageContent a #images {
-    font-size: 15px;
+    font-size: 16px;
     padding: 15px 10px;
   }
   .coffeeImages .zoomImage {
@@ -894,7 +892,7 @@ span.ham {
   /* Second Page Starts */
 
   .secondPageContent h3 {
-    font-size: 30px;
+    font-size: 16px;
   }
   /* About us */
   .writeUp {
@@ -902,7 +900,15 @@ span.ham {
     column-gap: 0;
   }
   .writeUp p {
-    font-size: 19px;
+    font-size: 16px;
+    font-family: "Roboto", sans-serif;
+    letter-spacing: 0.5px;
+  }
+  .texter button {
+    margin-top: 15px;
+  }
+  .images2 {
+    display: none;
   }
   .images2 img {
     width: 200px;
@@ -919,11 +925,18 @@ span.ham {
   .avatar p {
     font-size: 19px;
   }
+  .avatar .star1 {
+    margin-top: 0;
+  }
   .firstCard,
   .secondCard,
   .thirdCard {
     border-radius: 20px;
-    box-shadow: 0 0 20px gray;
+    box-shadow: 0 0 7px gray;
+  }
+  .firstCard,
+  .secondCard,
+  .thirdCard {
   }
 
   /* Footer */
