--- a/src/index.css
+++ b/src/index.css
@@ -95,10 +95,9 @@ span.ham {
 }
 .firstPageContent .wish {
   font-size: 50px;
-  font-family: roboto;
+  font-family: "roboto";
   margin: 50px 0 10px 0;
   color: rgb(107, 12, 12);
-  letter-spacing: -2px;
   text-transform: capitalize;
 }
 .para,
@@ -107,7 +106,7 @@ span.ham {
   letter-spacing: 0.5px;
 
   font-size: 16px;
-  text-align: center;
+  text-align: justify;
   font-weight: 300;
 }
 .firstPageContent button {
@@ -250,6 +249,8 @@ span.ham {
   display: flex;
   flex-direction: column;
   row-gap: 20px;
+  width: 80%;
+  text-align: justify;
 }
 
 .texter button {
@@ -265,7 +266,7 @@ span.ham {
   background-color: rgb(107, 12, 12);
   color: #fff;
   letter-spacing: 2.5px;
-  border-radius: 0 20px;
+  border-radius: 5px;
   transition: 0.3s;
 }
 .texter button:hover {
@@ -477,6 +478,7 @@ span.ham {
   flex-direction: column;
   row-gap: 30px;
   width: 400px;
+  text-align: justify;
 }
 .footer1 span {
   display: flex;
