--- a/src/index.css
+++ b/src/index.css
@@ -469,6 +469,32 @@ span.ham {
   text-transform: capitalize;
   font-weight: 300;
   letter-spacing: 1px;
+  position: relative;
+}
+.toTop {
+  position: fixed;
+  background-color: #484c53;
+  border-radius: 50%;
+  right: 20px;
+  bottom: 120px;
+  z-index: 3;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: 0.3s;
+}
+.upIcon {
+  height: 30px;
+  width: 30px;
+  padding: 10px;
+}
+.toTop:hover {
+  background-color: #fff;
+  color: #484c53;
+}
+
+.footerContainer .mail {
+  text-transform: lowercase;
 }
 .footerContainer a {
   color: #fff;
