--- a/src/index.css
+++ b/src/index.css
@@ -30,8 +30,9 @@ header {
   background-color: #fff;
 }
 .logo img {
-  height: 60px;
-  width: 60px;
+  height: 50px;
+  width: 50px;
+  object-fit: contain;
 }
 header a {
   text-decoration: none;
@@ -839,7 +840,7 @@ span.ham {
   }
   .logo img {
     width: 40px;
-    height: 50px;
+    height: 40px;
   }
 
   .navLinks-False {
