--- a/src/index.css
+++ b/src/index.css
@@ -800,6 +800,7 @@ span.ham {
 
   header {
     padding: 15px 20px;
+    box-shadow: 0 0 2px rgb(140, 19, 19);
   }
 
   span.ham {
@@ -867,7 +868,7 @@ span.ham {
     width: 70vw;
     flex-direction: column;
     right: 0;
-    margin-top: 80px;
+    margin-top: 60px;
     position: absolute;
     transition: 0.5s;
     z-index: -1;
